@@ -31,6 +31,7 @@ Date: 2024-12-08
     - Ammonia can now be burned in a burn-inator.
     - Added beryllium plates instead of making it ore only, just because plates have been neglected recently.
     - Added mod settings for PM! Ranging from things like how fast bots are (0.25x - 2x), [insert more things here]
+    - Added 2 new alternative recipes for LDS, using the 2 other main 'light' metals.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
@@ -98,6 +99,7 @@ Date: 2024-12-08
     - Changed evaporators to be unlocked within the crushing/glass technology.
     - Changed beacon 1's to take 8 red circuits, not 14.
     - Lowered the amount of PTFE used in LDS from 5 to 4.
+    - Lowered the amount of titanium used in LDS from 15 to 10.
 
   Fixes:
     - Fixed the science pack item names captilisation.
